# alkanes

./: .gitignore  .replrc.js  README.md  docker-compose.yaml  dogecoin-compose.yaml  package-lock.json  package.json  tsconfig.esm.json  tsconfig.json
assembly/: AlkaneContext.ts  AlkaneId.ts  AlkaneStorageMap.ts  AlkaneTransfer.ts  AlkaneTransferParcel.ts  CallResult.ts  Cellpack.ts  IndexPointer.ts  StorageMap.ts  StoragePointer.ts  env.ts  exports.ts  index.ts  utils.ts  vm.ts  wasmi.ts
build_test/: debug.wasm  debug.wasm.map  debug.wat  release.wasm  release.wasm.map  release.wat
custom_token_contract/: Cargo.toml
custom_token_contract/src/: lib.rs
docker/: Dockerfile-regtest  Dockerfile.bitcoind  Dockerfile.electrs  Dockerfile.indexer  Dockerfile.jsonrpc  Dockerfile.keydb  Dockerfile.ldb  Dockerfile.ord  Dockerfile.view  indexer-entrypoint.sh  ord-entrypoint.sh  view-entrypoint.sh
integration/: deploy-frbtc.ts  genesis.spec.ts  get-script-pubkey.ts  wrap-frbtc.ts
jsonrpc/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
lib/: alkane.d.ts  alkane.js  alkane.js.map  base-rpc.d.ts  base-rpc.js  base-rpc.js.map  bytes.d.ts  bytes.js  bytes.js.map  calldata.js.map  edict.d.ts  edict.js  edict.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  inscriptions.d.ts  inscriptions.js  inscriptions.js.map  invoke.d.ts  invoke.js  invoke.js.map  outpoint.d.ts  outpoint.js  outpoint.js.map  rpc.d.ts  rpc.js  rpc.js.map  util.d.ts  (+9 more)
runtime/: Cargo.toml
runtime/.cargo/: config.toml
runtime/.config/: nextest.toml
runtime/src/: .lib.rs.swo  lib.rs
(+274 files in other folders)
