[package]
name = "custom_token_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
alkanes-runtime = "0.1.0" # Placeholder version
alkanes-support = "0.1.0" # Placeholder version
metashrew-support = "0.1.0" # Placeholder version
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" # For error handling

[lib]
crate-type = ["cdylib"]
